# 234-seats

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
.github/workflows/: ci.yml
app/: config.py  database.py  dependencies.py  main.py  templates_config.py
app/models/: __init__.py  candidate.py  constituency.py  election.py  prediction.py  result.py  user.py
app/routes/: admin.py  api.py  auth.py  constituency.py  home.py
app/services/: auth.py  provisional_results.py  scoring.py
app/templates/: _predictions_section.html  base.html  constituency.html  error.html  home.html  login.html
app/templates/admin/: _seat_row.html  dashboard.html  parties.html  result_form.html  results.html  seat.html
data/: candidates_provisional.csv  constituencies.csv  parties.csv
migrations/: env.py
migrations/versions/: 3c7ddfb9e73c_add_candidates_table.py  4c9e9d7b2af1_add_constituency_image_url.py  77a5f0c2d1ef_add_party_alliance.py  8a4c7c181b0f_drop_current_mla.py  b6d1f4a9c2e8_add_provisional_results.py  f035a73c21a9_initial_schema.py
scripts/: create_users.py  generate_tn_map.py  import_candidates.py  import_results.py  pa_deploy.sh  parse_wiki_candidates.py  scrape_eci_provisional_results.py  seed_constituencies.py  seed_database.py
tests/: conftest.py  test_admin.py  test_admin_parties.py  test_app.py  test_auth.py  test_candidates.py  test_constituency.py  test_home.py  test_models.py  test_provisional_results.py  test_scoring.py  test_theme.py
