[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "234-seats"
version = "0.1.0"
description = "Election prediction webapp for Tamil Nadu 2026 assembly elections"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "itsdangerous>=2.2",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.3",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ty>=0.0.1a1",
    "pre-commit>=3.7",
]

# ---------------------------------------------------------------------------
# Ruff — linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["migrations/versions/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "RUF", # ruff-specific
]
ignore = [
    "B008",   # FastAPI uses Depends()/Form()/Cookie() in function defaults by design
    "ANN101", # annotating `self` is not required or recommended
    "TCH003", # moving stdlib imports into TYPE_CHECKING breaks SQLAlchemy annotation evaluation
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# ty — type checking
# ---------------------------------------------------------------------------
[tool.ty]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
